FIX: More visible drop downs in tables [t14960]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10595 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -17,6 +17,7 @@ input[readonly] {color: #000000;}
 
 select {background-color:white; border-radius:5px;border:none;}
 .Question select {border-radius:0; border:1px solid #999;}
+.ListTools .ActionsContainer select {border: 1px solid #a2a2a2;}
 input[type=submit] {border-radius: 5px;}
 
 #Header {
